--- a/PythonBasico/Jupyter/AulaJup4.ipynb
+++ b/PythonBasico/Jupyter/AulaJup4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca68e8ff",
    "metadata": {},
    "outputs": [],
@@ -13,18 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ee9de177",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class '__main__.Carro'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "palio = Carro()\n",
     "print(type(palio))"
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d55bfa71",
    "metadata": {},
    "outputs": [],
@@ -46,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "efc1c791",
    "metadata": {},
    "outputs": [],
@@ -58,20 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f3ce8068",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tarik\n",
-      "Pelé\n",
-      "Rick\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(estudante1.nome)\n",
     "print(estudante2.nome)\n",
@@ -80,20 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "47d53b2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n",
-      "29\n",
-      "53\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(estudante1.idade)\n",
     "print(estudante2.idade)\n",
@@ -102,20 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "95e00a33",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "99\n",
-      "90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(estudante1.nota)\n",
     "print(estudante2.nota)\n",
@@ -124,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7591ca54",
    "metadata": {},
    "outputs": [],
@@ -140,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ba87076f",
    "metadata": {},
    "outputs": [],
@@ -150,36 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2a76889e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O nome do funcionário é Obama e o salário é R$ 20000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "func1.listFunc()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "007ecc91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**** Usando atributos ****\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"**** Usando atributos ****\")"
    ]
@@ -188,6 +134,81 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be3b69ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "097f736c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal():\n",
+    "    def __init__(self):\n",
+    "        print(\"Animal criado\")\n",
+    "        \n",
+    "    def identif(self):\n",
+    "        print(\"Animal\")\n",
+    "        \n",
+    "    def comer(self):\n",
+    "        print(\"Comendo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bdfd702",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cachorro(Animal):\n",
+    "    def __init__(self):\n",
+    "        Animal.__init__(self)\n",
+    "        print(\"Objeto cachorro criado\")\n",
+    "        \n",
+    "    def identif(self):\n",
+    "        print(\"Cachorro\")\n",
+    "        \n",
+    "    def latir(self):\n",
+    "        print(\"Au Au!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaf50e44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rex = Cachorro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a1d618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rex.identif()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0549c4bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rex.comer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7491341",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
